# warp

.agents/skills/warp-oz-dev/: SKILL.md
app/: Cargo.toml
app/src/: features.rs
app/src/ai/blocklist/agent_view/agent_input_footer/: mod.rs
app/src/search/slash_command_menu/static_commands/: commands.rs
app/src/terminal/: input.rs  input_tests.rs  universal_developer_input.rs  view.rs
app/src/terminal/model/: blocks_tests.rs
app/src/terminal/view/use_agent_footer/: mod.rs
crates/warp_features/src/: lib.rs
grok-agent-sdk/: INTEGRATION.md  README.md  pyproject.toml
grok-agent-sdk-research-2026-06/: Grok-Agent-SDK-Plan.md
grok-agent-sdk-research-2026-06/findings/: 00-synthesis.md  01-cdp-port.md  02-stealth-auth.md  03-official-mcp.md  04-python-mcp.md  05-skills-cli.md  06-multi-agent.md  07-alternatives-summary.md
grok-agent-sdk-research-2026-06/snippets/: optimize_docx.py
grok-agent-sdk-research-2026-06/snippets/logged-in-chrome-scripts/: close_logged_in_chrome.ps1  launch_logged_in_chrome.ps1
grok-agent-sdk/src/grok_agent_sdk/: __init__.py  core.py
grok-agent-sdk/src/grok_agent_sdk/mcp/: __init__.py
resources/: copilot-cloud-sandbox-pro-setup-guide.md  github-copilot-agents-complete-docs (1).md  github-copilot-agents-complete-docs-FINAL.md  github-copilot-agents-complete-docs.md  local-models-ollama-copilot-codex-guide.md
tools/windows-kbd-light-forensics/: README.md  RESTORE-GUIDE.md  Trace-KeyboardLight.ps1
