[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grok-agent-sdk"
version = "0.1.0"
description = "Grok-powered agent SDK with browser automation, MCP integration, and multi-agent orchestration."
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.11"
authors = [
    { name = "Grok Agent SDK Team" }
]
keywords = ["grok", "xai", "agent", "sdk", "browser-automation", "mcp", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.7",
    "httpx>=0.27",
    # Browser / MCP (to be refined after research integration)
    # "patchright>=1.0",
    # "playwright>=1.44",
    # "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/xai-org/grok-agent-sdk"
Repository = "https://github.com/xai-org/grok-agent-sdk"
Documentation = "https://github.com/xai-org/grok-agent-sdk#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/grok_agent_sdk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
